tests/good/indent.js
var foo = 2,
    bar = 2;

function barfoo() {
    "use strict";
    return 5;
}

foo = foo + bar;