tests/bad/curly.js
var foo = 0;
if (5) 
    foo += 1;